--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.2",
